<resources>
    <string name="app_name">WeatherApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Description">Description</string>
    <string name="DateAndTime">DateAndTime</string>
    <string name="Location">Location</string>
    <string name="Temperature">Temperature</string>
    <string name="Time">Time</string>
    <string name="wind">wind</string>
    <string name="dew">dew</string>
    <string name="humidity">Humidity</string>
    <string name="deschum">deschum</string>
    <string name="pressure">Pressure</string>
    <string name="descpress">descpress</string>
    <string name="descwind">descwind</string>
    <string name="cloud">Cloud</string>
    <string name="desccloud">desccloud</string>
    <string name="uvi">Ultra Violet</string>
    <string name="descuvi">descuvi</string>
    <string name="visibilty">Visibility</string>
    <string name="descvis">descvis</string>
    <string name="Weeks">Weeks</string>
    <string name="title_activity_dialog">Dialog</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Save">Save</string>
    <string name="Gps">Gps</string>
    <string name="Maps">Maps</string>
    <string name="Language">Language</string>
    <string name="English">English</string>
    <string name="Arabic">Arabic</string>
    <string name="MeterSec">Meter/Sec</string>
    <string name="MileHour">Mile/Hour</string>
    <string name="Celesius">Celesius</string>
    <string name="Fahrenhit">Fahrenhit</string>
    <string name="Kelvin">Kelvin</string>
    <string name="Standard">Standard</string>
    />
    <string name="Metric">Metric</string>
    <string name="Imprial">Imprial</string>
    />
    />
</resources>