<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#BAB1CF"
    app:cardCornerRadius="20dp"
    app:cardElevation="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="134dp">

        <TextView
            android:id="@+id/tv_weeks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/Weeks"
            android:textColor="@color/light"
            app:layout_constraintEnd_toStartOf="@+id/img_weeks"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_weeks"
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:layout_marginTop="58dp"
            android:layout_marginEnd="49dp"
            app:layout_constraintEnd_toStartOf="@+id/tv_descweeks"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_favorite_24" />

        <TextView
            android:id="@+id/tv_descweeks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="49dp"
            android:layout_marginTop="64dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/Description"
            android:textColor="@color/light"
            app:layout_constraintStart_toEndOf="@+id/img_weeks"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_tempweeks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/Temperature"
            android:textColor="@color/light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>