<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="365dp"
        android:layout_height="228dp"
        app:cardBackgroundColor="#BAB1CF"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="223dp">

            <TextView
                android:id="@+id/tv_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/Time"
                android:textColor="@color/light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_weather"
                android:layout_width="71dp"
                android:layout_height="57dp"
                android:layout_marginTop="23dp"
                app:layout_constraintEnd_toEndOf="@+id/tv_hour"
                app:layout_constraintStart_toStartOf="@+id/tv_hour"
                app:layout_constraintTop_toBottomOf="@+id/tv_hour"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/Description"
                android:textColor="@color/light"
                app:layout_constraintEnd_toEndOf="@+id/img_weather"
                app:layout_constraintStart_toStartOf="@+id/img_weather"
                app:layout_constraintTop_toBottomOf="@+id/img_weather" />

            <TextView
                android:id="@+id/tv_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/Temperature"
                android:textColor="@color/light"
                app:layout_constraintEnd_toEndOf="@+id/tv_desc"
                app:layout_constraintStart_toStartOf="@+id/tv_desc"
                app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

            <ImageView
                android:id="@+id/img_wind"
                android:layout_width="62dp"
                android:layout_height="56dp"
                android:layout_marginStart="35dp"
                android:layout_marginBottom="74dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:srcCompat="@drawable/wind" />

            <TextView
                android:id="@+id/tv_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/wind"
                android:textColor="@color/light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/img_wind"
                app:layout_constraintStart_toStartOf="@+id/img_wind" />

            <ImageView
                android:id="@+id/img_dew"
                android:layout_width="59dp"
                android:layout_height="67dp"
                android:layout_marginEnd="35dp"
                android:layout_marginBottom="2dp"
                app:layout_constraintBottom_toTopOf="@+id/tv_dew"
                app:layout_constraintEnd_toEndOf="parent"
                tools:srcCompat="@drawable/dew" />

            <TextView
                android:id="@+id/tv_dew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="38dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/dew"
                android:textColor="@color/light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/img_dew"
                app:layout_constraintStart_toStartOf="@+id/img_dew" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>